--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <div id="instafeed"></div>
 <script type="text/javascript">
     var feed = new Instafeed({
-        get: 'tagged',
-        tagName: 'awesome',
-        clientId: 'YOUR_CLIENT_ID'
+        clientId: 'gaming.evo'
     });
     feed.run();
 </script>
