--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Insta Stories</title>
-	<script type="text/javascript" src="instafeed.min.js"></script>
+	<script type="text/javascript" src="instafeed.js"></script>
 </head>
 <body>
 <div id="instafeed"></div>
